Fix for grid-spacing

--- a/sites/all/themes/bartik/css/style.css
+++ b/sites/all/themes/bartik/css/style.css
@@ -1828,7 +1828,8 @@ ul.mr-grid {
 ul.mr-grid li {
   display:inline-block;
   max-width:210px;
-  vertical-align:top;
+  padding: 0.2em 0.3em 0 0;
   text-align:center;
+  vertical-align:top;
 }
 
